================================================
|                Version 0.2                   |
================================================
 - Terrain texture splatting;
 - Script Language for AI;
 - Using SDL_ttf to write;
 - Load/Save Functions;
 - Workspace for compiling at M$ Visual C++ 6;
 - More Engine Optimizations;
 - Messages on world map;
 - Smooth Camera Movements;
 - Indoor Reflexions;
 - Initial stage story;
 - Option to set screen resolution;
 - Don't let camera inner terrain;
 - Better Dynamic Lights Implementation;
 - Missions;
 - Receive XP on killing, trickering and completing 
   missions;
 - Finish the implementation of combats on fight 
   system;
 - Rewrote the GUI Renderer;
 - Fully and scalable collision for the 3D models;
 - GNU gettext used for internationalization;
 - Meteors and FireSpheres;
 - Merchants;
 - Use of some items;
 - Use of some weapons;
 - Capacity to use Feats;
 - Capacity to use Skills;
 - Item Information Window;
 - Apply Race and Class Skills Costs and level limits;
 - Put the code fully on English (instead of some
   places on english, others on portuguese);
 - New Sound Effects;
 - More 3D Objects;
 - More Characters;
 - Some Adjusts on A*;
 - Objects are now only in cal3D, no more .obj;
 - First real-game maps;
 - Make Install now works;
 - Fixed Bug on remove no more used Models and 
   dead with items;
 - Fixed Bug on NPCs Fight Animations;
 - Fixed Bug on configures;
 - Other minor bugs fixes;

================================================
|               Version 0.1.1                  |
================================================
 - Fixed Bug on Makefiles (they aren't using
   things defined at the autoconf);
 - Fixed Bug on A*: request a new path when
   not finished the movement to one maybe
   result in a crash or allow the character to
   move on a forbidden area;
 - Fixed Bug on .obj models definitions;
 - Fixed Bug on the inventory HEAD;
 - Defined 35 FPS as the minimum one, instead of 