@@ -35,19 +35,21 @@
  * \param title -> title of the screen
  * \param width -> screen width
  * \param height -> screen height
- * \param fullScreen -> true if is fullscreen */
+ * \param fullScreen -> true if is fullscreen
+ * \param antiAliasingSample -> number of Antialising used (0 == disabled) */
 void Farso_Init(SDL_Surface **screen, string title, int width, int height,
-                bool fullScreen);
+                bool fullScreen, int antiAliasingSample);
 
 /*! Define the SDL/OpenGL Context Resolution
  * \param screen -> pointer to the pointer to the surface used as screen
  * \param title -> title of the screen
  * \param width -> screen width
  * \param height -> screen height
- * \param fullScreen -> true if is fullscreen */
+ * \param fullScreen -> true if is fullscreen
+ * \param antiAliasingSample -> number of Antialising used (0 == disabled) */
 void Farso_DefineResolution(SDL_Surface **screen, string title, 
                             int width, int height,
-                            bool fullScreen);
+                            bool fullScreen, int antiAliasingSample);
 
 /*! End the SDL/OpenGL Context
  * \param screen -> surface used as screen */
