@@ -7,6 +7,7 @@
  - Load/Save Functions;
  - Workspace for compiling at M$ Visual C++ 6;
  - More Engine Optimizations;
+ - Scene Antialising;
  - Messages on world map;
  - Smooth Camera Movements;
  - Indoor Reflexions;
